[profile.release]
lto = true

[package]
name = "network-client"
version = "0.1.0"
authors = ["LAGonauta <lagonauta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.8.1"
bytebuffer = "0.2.1"
env_logger = "0.7.1"